<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="#FFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/card_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/card_gradient_background"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:contentDescription="@string/todo"
        android:background="@drawable/black_gradiant"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="132dp"
        />

    <TextView
        android:id="@+id/card_day_event"
        android:layout_width="48dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/_25"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/card_month_event"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/card_month_event"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/out"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/card_event_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="32dp"
        android:gravity="center|start"
        android:text="@string/event_name"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card_checkin_btn"
        app:layout_constraintStart_toEndOf="@+id/card_day_event"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/card_local_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:gravity="center|start"
        android:text="@string/event_local"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card_checkin_btn"
        app:layout_constraintStart_toEndOf="@+id/card_day_event"
        app:layout_constraintTop_toBottomOf="@+id/card_event_name" />

    <Button
        android:id="@+id/card_checkin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_checkin_style"
        android:text="@string/checkin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
